# nodeset-rs

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  log
.github/workflows/: ci.yml  release-plz.yml
nodeset-capi/: Cargo.toml  Makefile  build.rs  cbindgen.toml
nodeset-capi/examples/: Makefile  ns_intersect_iter.c  ns_list.c
nodeset-capi/include/: nodeset.h
nodeset-capi/src/: lib.rs  nodeset_capi.rs
nodeset-capi/tests/: Makefile  test_suite.c
src/: lib.rs  main.rs
src/collections/: config.rs  idset.rs  mod.rs  nodeset.rs  parsers.rs
src/collections/tests/: cluster.yaml  groups.cfg  local.cfg  multi.conf
src/idrange/: mod.rs  rangelist.rs  rangetree.rs
