[package]
name = "nodeset"
version = "0.5.0"
authors = ["Francois Diakhate <fdiakh@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fdiakh/nodeset-rs"
keywords = ["nodeset", "hostlist", "cluster", "hpc"]
categories = ["command-line-utilities"]
description = "NodeSet management library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ns"
path = "src/main.rs"

[dependencies]
itertools = "0.10.5"
clap = { version = "4.2.7", features = ["derive"] }
nom = "7.1.3"
eyre = "0.6.8"
log = { version = "0.4.17", features = ["release_max_level_debug"] }
env_logger = "0.10.0"
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
shellexpand = "3.1.0"
shlex = "1.1.0"
rust-ini = "0.19.0"
serde_yaml = "0.9.34"
auto_enums = "0.8.5"

[dev-dependencies]
tempfile = "3.14.0"


[profile.release]
debug = true

[workspace]
members = ["nodeset-capi"]
